# pokemon-world

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  pokeapi_endpoints.rs  rest_endpoints.rs  utils.rs
src/request_handlers/: basic_info.rs  translated_desc.rs
