[package]
name = "pokemon-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.10" }
serde = "1.0.117"
serde_json = "1.0.59"
reqwest = { version = "0.11.7", features = ["json"] }
log = "0.4.14"
env_logger = "0.9.0"

